# worldSim

./: .gitignore  Agent.cpp  Agent.h  AgentsPrinter.cpp  AgentsPrinter.h  CMakeLists.txt  Cell.cpp  Cell.h  Creature.cpp  Creature.h  CreaturesPrinter.cpp  CreaturesPrinter.h  FoodItem.cpp  FoodItem.h  FoodPrinter.cpp  FoodPrinter.h  README.md  Vector2.h  WORKING_PARAMETERS.md  World.cpp  World.h  graphs.py  graphs2.py  main.cpp  vizualize.py  vizualize2.py
creatures/: Creature.cpp  Creature.h  Predator.cpp  Predator.h  Prey.cpp  Prey.h
food/: Eatable.cpp  Eatable.h  FoodPlant.cpp  FoodPlant.h
printers/: CreaturesPrinter.cpp  CreaturesPrinter.h  FoodPrinter.cpp  FoodPrinter.h
settings/: parameters.json
utilities/: SimParameters.cpp  SimParameters.h  Vector2.cpp  Vector2.h
